force-app/main/default/objects/AM_parametros_calcular_credito__c/AM_parametros_calcular_credito__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Parámetros calcular crédito</label>
</CustomObject>