force-app/main/default/objects/AM_parametros_calcular_credito__c/fields/AM_Porcentage_de_robo__c.field-meta.xml
<CustomField>
    <fullName>AM_Porcentage_de_robo__c</fullName>
    <label>% de robo</label>
    <precision>6</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>