force-app/main/default/objects/AM_parametros_calcular_credito__c/fields/AM_Porcentaje_seguro_robo_credito__c.field-meta.xml
<CustomField>
    <fullName>AM_Porcentaje_seguro_robo_credito__c</fullName>
    <label>% Seguro robo credito</label>
    <precision>5</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>