force-app/main/default/objects/AM_parametros_calcular_credito__c/fields/AM_Valor_seguro_accidente__c.field-meta.xml
<CustomField>
    <fullName>AM_Valor_seguro_accidente__c</fullName>
    <label>Valor seguro accidente</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>