force-app/main/default/objects/AM_parametros_calcular_credito__c/fields/AM_Valor_seguro_desempleo__c.field-meta.xml
<CustomField>
    <fullName>AM_Valor_seguro_desempleo__c</fullName>
    <label>Valor seguro desempleo</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>